--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -16,28 +16,28 @@
         <picture>
           <source
             srcset="
-              ../img/hero/hero-face-desc.png   1x,
-              ../img/hero/hero-face-desc2x.png 2x
+              ./img/hero/hero-face-desc.png   1x,
+              ./img/hero/hero-face-desc2x.png 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ../img/hero/hero-face-tab.png   1x,
-              ../img/hero/hero-face-tab2x.png 2x
+              ./img/hero/hero-face-tab.png   1x,
+              ./img/hero/hero-face-tab2x.png 2x
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
-              /img/hero/hero-face-mob.png   1x,
-              /img/hero/hero-face-mob2x.png 2x
+              ./img/hero/hero-face-mob.png   1x,
+              ./img/hero/hero-face-mob2x.png 2x
             "
             media="(max-width: 767px)"
           />
           <img
             class="hero-face"
-            src="../img/hero/hero-face-desc.png"
+            src="./img/hero/hero-face-desc.png"
             alt="people"
           />
         </picture>
@@ -47,28 +47,28 @@
     <picture>
       <source
         srcset="
-          ../img/hero/hero-watch-desc.png   1x,
-          ../img/hero/hero-watch-desc2x.png 2x
+          ./img/hero/hero-watch-desc.png   1x,
+          ./img/hero/hero-watch-desc2x.png 2x
         "
         media="(min-width: 1280px)"
       />
       <source
         srcset="
-          ../img/hero/hero-watch-tab.png   1x,
-          ../img/hero/hero-watch-tab2x.png 2x
+          ./img/hero/hero-watch-tab.png   1x,
+          ./img/hero/hero-watch-tab2x.png 2x
         "
         media="(min-width: 768px)"
       />
       <source
         srcset="
-          ../img/hero/hero-watch-mob.png   1x,
-          ../img/hero/hero-watch-mob2x.png 2x
+          ./img/hero/hero-watch-mob.png   1x,
+          ./img/hero/hero-watch-mob2x.png 2x
         "
         media="(max-width: 767px)"
       />
       <img
         class="hero-watch"
-        src="../img/hero/hero-watch-desc.png"
+        src="./img/hero/hero-watch-desc.png"
         alt="watch"
       />
     </picture>
