--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,55 +1,108 @@
 <header>
    <div>
-    <nav><a href="">watchcharm</a>
-    <ul>
+    <nav class="navigation">
+        <a class="logo" href="../index.html">watchcharm</a>
+    <ul class="nav-list">
         <li>
-            <a href="">Home</a>
+            <a class="nav-link" href="./hero.html">Home</a>
         </li>
         <li>
-            <a href="">About Us</a>
+            <a class="nav-link" href="./about.html">About Us</a>
         </li>
         <li>
-            <a href="">Catalog</a>
+            <a class="nav-link" href="./catalog.html">Catalog</a>
         </li>
         <li>
-            <a href="">Sale</a>
+            <a class="nav-link" href="./sale.html">Sale</a>
         </li>
         <li>
-            <a href="">Reviews</a>
+            <a class="nav-link" href="./reviews.html">Reviews</a>
         </li>
         <li>
-            <a href="">Contact Us</a>
+            <a class="nav-link" href="./contact.html">Contact Us</a>
         </li>
     </ul>
     </nav>
     <ul>
         <li>
-            <a>
-                <svg width="36" height="36">
-                    <use href="../img/icons.svg#icon-facebook">
-
-                    </use>
+            <a href="https://www.facebook.com/goITclub/">
+                <svg width="20" height="20">
+                    <use href="../img/icons.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
         <li>
-            <a>
-                <svg width="36" height="36">
-                    <use href="../img/icons.svg#icon-instagram">
-
-                    </use>
+            <a href="https://www.instagram.com/goitclub/">
+                <svg width="20" height="20">
+                    <use href="../img/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
         </li>
         <li>
-            <a>
-                <svg width="36" height="36">
-                    <use href="./img/icons.svg#icon-youtube">
-
-                    </use>
+            <a href="https://www.youtube.com/c/GoIT">
+                <svg width="20" height="20">
+                    <use href="../img/icons.svg#icon-youtube"></use>
                 </svg>
             </a>
         </li>
     </ul>
+    <button type="button" class="open-menu-btn">
+        <svg width="40" height="40">
+            <use href="../img/icons.svg#icon-menu"></use>
+        </svg>
+    </button>
    </div> 
 </header>
+
+<!--mob-menu-->
+
+<div class="mob-menu">
+    <div>
+        <button type="button" class="menu-close-bth">
+            <svg class="menu-close-icon" width="40" height="40">
+                <use href="../img/icons.svg#icon-close"></use>
+            </svg>
+        </button>
+        <nav class="mob-menu-nav">
+            <ul class="mob-menu-list">
+                <li class="mob-menu-item">
+                    <a class="mob-menu-link" href="./hero.html">Home</a></li>
+                <li class="mob-menu-item">
+                    <a class="mob-menu-link" href="./about.html">About Us</a></li>
+                <li class="mob-menu-item">
+                    <a class="mob-menu-link" href="./catalog.html">Catalog</a></li>
+                <li class="mob-menu-item">
+                    <a class="mob-menu-link" href="./sale.html">Sale</a></li>
+                <li class="mob-menu-item">
+                    <a class="mob-menu-link" href="./reviews.html">Reviews</a></li>
+                <li class="mob-menu-item">
+                    <a class="mob-menu-link" href="./contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div class="mob-menu-wrap">
+        <ul class="mob-soc-list">
+            <li class="mob-soc-item">
+                <a class="team-social-link" href="https://www.facebook.com/goITclub/">
+                    <svg width="18" height="18">
+                        <use href="../img/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="mob-soc-item">
+                <a class="team-social-link" href="https://www.instagram.com/goitclub/">
+                    <svg width="18" height="18">
+                        <use href="../img/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="mob-soc-item">
+                <a class="team-social-link" href="https://www.youtube.com/c/GoIT">
+                    <svg width="18" height="18">
+                        <use href="./img/icons.svg#icon-youtube"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+</div>
+</div>
