--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,5 @@
-npm install
 <footer class="footer-mob">
-  <div class="footer-conteiner">
+  <div class="conteiner-title">
     <div class="logo">
       <a href="logo-logo" href="./index.html">watchcharm</a>
     </div>
@@ -8,21 +7,21 @@ npm install
       <ul class="footer-icons-list">
         <li class="footer-icon-item">
           <a href="" class="footer-icon-link">
-            <svg class="footer-icon-icon" width="34" height="34">
+            <svg class="footer-icon-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="footer-icon-item">
           <a href="" class="footer-icon-link">
-            <svg class="footer-icon-icon" width="34" height="34">
+            <svg class="footer-icon-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="footer-icon-item">
           <a href="" class="footer-icon-link">
-            <svg class="footer-icon-icon" width="34" height="34">
+            <svg class="footer-icon-icon" width="18" height="18">
               <use href="./images/icons.svg#icon-youtube"></use>
             </svg>
           </a>
