--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
         <li class="footer-icon-item">
           <a href="" class="footer-icon-link">
             <svg class="footer-icon-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-facebook"></use>
+              <use href="../img/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
