--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
-<header>
-   <div>
+<header class="header">
+   <div class="conteiner">
     <nav class="navigation">
         <a class="logo" href="../index.html">watchcharm</a>
     <ul class="nav-list">
@@ -22,23 +22,23 @@
             <a class="nav-link" href="./contact.html">Contact Us</a>
         </li>
     </ul>
-    </nav>
-    <ul>
-        <li>
+   
+    <ul class="nav-soc">
+        <li class="nav-soc-link">
             <a href="https://www.facebook.com/goITclub/">
                 <svg width="20" height="20">
                     <use href="../img/icons.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
-        <li>
+        <li class="nav-soc-link">
             <a href="https://www.instagram.com/goitclub/">
                 <svg width="20" height="20">
                     <use href="../img/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
         </li>
-        <li>
+        <li class="nav-soc-link">
             <a href="https://www.youtube.com/c/GoIT">
                 <svg width="20" height="20">
                     <use href="../img/icons.svg#icon-youtube"></use>
@@ -46,6 +46,8 @@
             </a>
         </li>
     </ul>
+    </div>
+</nav>
     <button type="button" class="open-menu-btn">
         <svg width="40" height="40">
             <use href="../img/icons.svg#icon-menu"></use>
