--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -59,12 +59,13 @@
 <!--mob-menu-->
 
 <div class="mob-menu">
-    <div>
+  
         <button type="button" class="menu-close-bth">
             <svg class="menu-close-icon" width="40" height="40">
                 <use href="../img/icons.svg#icon-close"></use>
             </svg>
         </button>
+    <div class="menu">
         <nav class="mob-menu-nav">
             <ul class="mob-menu-list">
                 <li class="mob-menu-item">
@@ -106,5 +107,6 @@
                 </a>
             </li>
         </ul>
+    </div>
 </div>
 </div>
