--- a/src/css/about.css
+++ b/src/css/about.css
@@ -81,4 +81,25 @@
 }
 
 @media screen and (min-width: 1280px) {
+  .about {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  .container-about {
+    display: flex;
+    gap: 40px;
+  }
+
+  .about-wrap {
+    margin-bottom: 0;
+  }
+
+  .about-text:nth-child(3) {
+    margin-bottom: 40px;
+  }
+
+  .about-image {
+    flex-shrink: 0;
+  }
 }
