--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,27 +6,59 @@
     <div class="social-conteiner">
       <ul class="footer-icons-list">
         <li class="footer-icon-item">
-          <a href="" class="footer-icon-link">
+          <a href="https://www.facebook.com/goITclub/" class="footer-icon-link">
             <svg class="footer-icon-icon" width="18" height="18">
-              <use href="../img/icons.svg#icon-facebook"></use>
+              <use href="./img/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="footer-icon-item">
-          <a href="" class="footer-icon-link">
+          <a
+            href="https://www.instagram.com/goitclub/ "
+            class="footer-icon-link"
+          >
             <svg class="footer-icon-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-instagram"></use>
+              <use href="./img/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="footer-icon-item">
-          <a href="" class="footer-icon-link">
+          <a
+            href="https://www.facebook.com/goITclub/ "
+            class="footer-icon-link"
+          >
             <svg class="footer-icon-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-youtube"></use>
+              <use href="./img/icons.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
       </ul>
     </div>
+    <button
+      type="button"
+      class="phone-button"
+      onclick="window.location.href='tel:+380684439426'"
+    >
+      <span class="phone-button-text">+380 (68) 443-94-26</span>
+    </button>
+    <p class="footer-text">
+      Have the time of your life with our watches: where high-class
+      craftsmanship meets impeccable design
+    </p>
+    <div class="footer-menu">
+      <ul class="footer-menu-contact">
+        <li class="ft-menu-list">Home</li>
+        <li class="ft-menu-list">About Us</li>
+        <li class="ft-menu-list">Catalog</li>
+        <li class="ft-menu-list">Sale</li>
+        <li class="ft-menu-list">Reviews</li>
+        <li class="ft-menu-list">Contact Us</li>
+      </ul>
+    </div>
+    <!-- <div class="footer-adress">
+      <p class="footer-adress-text">
+        1678 S. Pioneer Road Salt Lake City UT 84104
+      </p>
+    </div> -->
   </div>
 </footer>
