--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,4 +1,4 @@
-.contact-container {
+.contact-section {
   padding-top: 30px;
   padding-bottom: 30px;
 }
@@ -11,8 +11,6 @@
   letter-spacing: -0.64px;
 }
 .form-box {
-  width: auto;
-  margin: 0 auto;
   padding: 48px 28px;
   margin-bottom: 20px;
 
@@ -34,17 +32,13 @@
   flex-direction: column;
 }
 .form-input {
-  max-width: 279px;
   height: 42px;
   margin-bottom: 18px;
   padding-left: 14px;
   padding-top: 12px;
   padding-bottom: 12px;
 
-  color: #0c0c0c;
-  font-family: Gilroy, sans-serif;
   font-size: 14px;
-  font-weight: 400;
   line-height: 18px;
 
   outline: transparent;
@@ -52,28 +46,23 @@
   border: 1px solid rgba(12, 12, 12, 0.15);
   background-color: inherit;
 
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus {
-  border-radius: 12px;
   border: 1px solid #3350e9;
 }
 .form-input::placeholder {
   color: #0c0c0c;
-  font-family: Gilroy, sans-serif;
   font-size: 14px;
-  font-weight: 400;
   line-height: 18px;
 }
 .comment-input {
-  max-width: 279px;
   height: 84px;
   margin-bottom: 28px;
   padding-left: 14px;
   padding-top: 12px;
 
   font-size: 14px;
-  font-weight: 400;
   line-height: 18px;
 
   border-radius: 12px;
@@ -82,17 +71,14 @@
   outline: transparent;
   resize: none;
 
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .comment-input:focus {
-  border-radius: 12px;
   border: 1px solid #3350e9;
 }
 .comment-input::placeholder {
   color: #0c0c0c;
-  font-family: Gilroy, sans-serif;
   font-size: 14px;
-  font-weight: 400;
   line-height: 18px;
 }
 .form-button {
@@ -100,8 +86,7 @@
   padding: 12px 50px;
 
   color: #fbfbfb;
-  text-align: center;
-  font-family: Gilroy, sans-serif;
+
   font-size: 14px;
   font-weight: 500;
   line-height: 18px;
@@ -119,7 +104,7 @@
 
 /* Tablet */
 @media screen and (min-width: 768px) {
-  .contact-container {
+  .contact-section {
     padding-top: 40px;
     padding-bottom: 40px;
   }
@@ -143,9 +128,7 @@
     letter-spacing: -0.32px;
   }
   .form-input {
-    max-width: 460px;
     height: 52px;
-    margin-bottom: 18px;
     padding-left: 18px;
     padding-top: 16px;
     padding-bottom: 16px;
@@ -158,7 +141,6 @@
     line-height: 20px;
   }
   .comment-input {
-    max-width: 460px;
     height: 90px;
     margin-bottom: 32px;
     padding-left: 16px;
@@ -179,23 +161,17 @@
 
 /* Desktop */
 @media screen and (min-width: 1280px) {
-  .contact-container {
+  .contact-section {
     padding-top: 50px;
     padding-bottom: 50px;
   }
   .content-field {
-    margin: 0 auto;
     display: flex;
     gap: 40px;
   }
   .form-box {
     max-width: 580px;
-    height: 556px;
     padding: 50px 60px;
-    margin-bottom: 20px;
-    align-items: flex-start;
-
-    border-radius: 30px;
-    background: #f3f3f3;
+    margin-bottom: 0;
   }
 }
