--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -9,7 +9,7 @@
         </p>
 
         <form class="form">
-          <label class="form-label" for="user-name">Name</label>
+          <label class="form-label" for="user-name"></label>
           <input
             class="form-input"
             type="text"
