--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -26,10 +26,21 @@
   line-height: 18px;
   letter-spacing: -0.28px;
 }
-
 .form {
   display: flex;
   flex-direction: column;
+}
+.form-label {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 .form-input {
   height: 42px;
