--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -9,7 +9,7 @@
         </p>
 
         <form class="form">
-          <label class="form-label" for="user-name"></label>
+          <label class="form-label" for="user-name">Name</label>
           <input
             class="form-input"
             type="text"
@@ -19,7 +19,7 @@
             required
           />
 
-          <label class="form-label" for="mail"></label>
+          <label class="form-label" for="mail">Email</label>
           <input
             class="form-input"
             type="email"
@@ -30,7 +30,7 @@
             pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
           />
 
-          <label class="form-label" for="phone"></label>
+          <label class="form-label" for="phone">Phone</label>
           <input
             class="form-input"
             type="tel"
@@ -41,7 +41,7 @@
             pattern="^\+\d{3}-\d{2}-\d{3}-\d{2}-\d{2}$"
           />
 
-          <label for="user-comment"> </label>
+          <label class="form-label" for="user-comment">Comment</label>
           <textarea
             class="comment-input"
             name="user-comment"
@@ -54,19 +54,19 @@
 
       <picture>
         <source
-          srcset="./img/contact/mob1x.jpg 1x, ./img/contact/mob2x.jpg 2x"
-          media="(max-width: 767px)"
-        />
-        <source
-          srcset="./img/contact/tab1x.jpg 1x, ./img/contact/tab2x.jpg 2x"
-          media="(min-width: 768px) and (max-width: 1279px)"
-        />
-        <source
           srcset="./img/contact/desk1x.jpg 1x, ./img/contact/desk2x.jpg 2x"
           media="(min-width: 1280px)"
         />
+        <source
+          srcset="./img/contact/tab1x.jpg 1x, ./img/contact/tab2x.jpg 2x"
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="./img/contact/mob1x.jpg 1x, ./img/contact/mob2x.jpg 2x"
+          media="(max-width: 767px)"
+        />
 
-        <img src="./img/contact/mob1x.jpg" alt="watch picture" />
+        <img src="./img/contact/tab1x.jpg" alt="watch picture" />
       </picture>
     </div>
   </div>
