--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,9 @@
 <header class="header">
-   <div class="conteiner">
-    <nav class="navigation">
+   <div class="container header-menu">
+    <div class="header-wrap-desk">
+     <nav class="navigation">
         <a class="logo" href="../index.html">watchcharm</a>
-    <ul class="nav-list">
+     <ul class="nav-list">
         <li>
             <a class="nav-link" href="./hero.html">Home</a>
         </li>
@@ -22,7 +23,8 @@
             <a class="nav-link" href="./contact.html">Contact Us</a>
         </li>
     </ul>
-   
+</nav>
+<div class="header-soc-wrap">
     <ul class="nav-soc">
         <li class="nav-soc-link">
             <a href="https://www.facebook.com/goITclub/">
@@ -46,19 +48,33 @@
             </a>
         </li>
     </ul>
-    </div>
-</nav>
+</div>
+    
+    
+<!-- 
     <button type="button" class="open-menu-btn">
         <svg width="40" height="40">
             <use href="../img/icons.svg#icon-menu"></use>
         </svg>
-    </button>
-   </div> 
+    </button> -->
+</div>
+<!-- MOB-HEADER -->
+<div class="header-mob">
+    <nav class="header-nav-mob"><a href="../index.html" class="logo-mob">watchcharm</a>
+        <button type="button" class="header-btn">
+            <svg class="header-btn-icon" width="34" height="34">
+                <use href="../img/icons.svg#icon-menu"></use>
+            </svg>
+        </button>
+    </nav>
+</div>
+<!-- MOB-HEADER -->
+</div>
 </header>
 
 <!--mob-menu-->
 
-<div class="mob-menu">
+<!--<div class="mob-menu">
   
         <button type="button" class="menu-close-bth">
             <svg class="menu-close-icon" width="40" height="40">
@@ -110,3 +126,4 @@
     </div>
 </div>
 </div>
+-->
