--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-mob">
+<footer class="footer-container">
   <div class="conteiner-title">
     <div class="logo">
       <a href="logo-logo" href="./index.html">watchcharm</a>
@@ -45,20 +45,31 @@
       Have the time of your life with our watches: where high-class
       craftsmanship meets impeccable design
     </p>
-    <div class="footer-menu">
-      <ul class="footer-menu-contact">
-        <li class="ft-menu-list">Home</li>
-        <li class="ft-menu-list">About Us</li>
-        <li class="ft-menu-list">Catalog</li>
-        <li class="ft-menu-list">Sale</li>
-        <li class="ft-menu-list">Reviews</li>
-        <li class="ft-menu-list">Contact Us</li>
+
+    <div class="footer-conteiner-menu">
+      <div class="footer-menu">
+        <ul class="footer-menu-contact">
+          <li class="ft-menu-list">Home</li>
+          <li class="ft-menu-list">About Us</li>
+          <li class="ft-menu-list">Catalog</li>
+          <li class="ft-menu-list">Sale</li>
+          <li class="ft-menu-list">Reviews</li>
+          <li class="ft-menu-list">Contact Us</li>
+        </ul>
+      </div>
+      <div class="footer-adress">
+        <p class="footer-adress-text">
+          1678 S. Pioneer Road Salt Lake City UT 84104
+        </p>
+      </div>
+    </div>
+    <div class="horizontal-line"></div>
+    <div class="policy">
+      <p class="policy-text">©2023 The Watch Spot. All rights reserved.</p>
+      <ul class="policy-list">
+        <li class="policy-text-list">Terms of Service</li>
+        <li class="policy-text-list">Privacy Policy</li>
       </ul>
     </div>
-    <!-- <div class="footer-adress">
-      <p class="footer-adress-text">
-        1678 S. Pioneer Road Salt Lake City UT 84104
-      </p>
-    </div> -->
   </div>
 </footer>
