--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,6 +1,5 @@
-.footer-mob {
+.footer-container {
   width: 100%;
-  padding: 0 20px;
   margin: 0 auto;
   height: 581px;
   background-color: #0c0c0c;
@@ -83,7 +82,6 @@
   display: inline-block;
   background-color: transparent;
   border: 1px solid #fbfbfb33;
-  /* padding: 14px 20px; */
   margin-top: 20px;
   margin-bottom: 40px;
 }
@@ -104,15 +102,25 @@
   color: #fbfbfb;
 }
 
+.footer-conteiner-menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
 .footer-menu {
+  flex: 1;
   width: 147px;
-  height: 64px;
-  padding-top: 92px;
+  margin-top: 92px;
   gap: 16px;
+  margin-right: 49px;
 }
 
 .footer-menu-contact {
+  display: flex;
   flex-wrap: wrap;
+  gap: 16px;
+  align-items: center;
 }
 
 .ft-menu-list {
@@ -124,13 +132,109 @@
 }
 
 .footer-adress {
+  text-align: right;
+  display: flex;
   width: 83px;
   height: 48px;
+  align-items: center;
+  margin-top: 92px;
 }
+
 .footer-adress-text {
   font-size: 12px;
   font-weight: 500;
   line-height: 16px;
   text-align: left;
   color: #fbfbfb;
+}
+
+.horizontal-line {
+  width: 100%;
+  border: 1px solid #fbfbfb1a;
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
+.policy {
+  width: 187px;
+  height: 36px;
+  gap: 8px;
+}
+.policy-text {
+  width: 187px;
+  height: 14px;
+  gap: 0px;
+  opacity: 0.9px;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  color: #fbfbfb80;
+}
+.policy-list {
+  display: flex;
+}
+.policy-text-list {
+  margin-right: 20px;
+  width: 152px;
+  height: 14px;
+  gap: 20px;
+  opacity: 0.9px;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: -0.02em;
+  text-align: left;
+  color: #fbfbfb80;
+}
+/*----footer Tab----*/
+
+@media screen and (min-width: 768px) {
+  .footer-container {
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+  }
+  .phone-button {
+    width: 160px;
+    height: 48px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+  .footer-text {
+    width: 524px;
+    height: 96px;
+    margin: 0 auto;
+    text-align: center;
+    left: 50px;
+    font-size: 28px;
+    font-weight: 600;
+    margin-top: 86px;
+  }
+  .footer-adress {
+    width: 162px;
+    height: 36px;
+  }
+  .policy {
+    width: 100%;
+    height: 18px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .policy-list {
+    gap: 20px;
+  }
+  .policy-text-list {
+    text-align: center;
+  }
+}
+/*-----desktop-----*/
+
+@media screen and (min-width: 1280px) {
+  .footer-container {
+    max-width: 1280px;
+    padding: 0 65px;
+  }
 }
