--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -49,14 +49,6 @@
         </li>
     </ul>
 </div>
-    
-    
-<!-- 
-    <button type="button" class="open-menu-btn">
-        <svg width="40" height="40">
-            <use href="../img/icons.svg#icon-menu"></use>
-        </svg>
-    </button> -->
 </div>
 <!-- MOB-HEADER -->
 <div class="header-mob">
@@ -74,10 +66,9 @@
 
 <!--mob-menu-->
 
-<!--<div class="mob-menu">
-  
-        <button type="button" class="menu-close-bth">
-            <svg class="menu-close-icon" width="40" height="40">
+<div class="mob-menu">
+          <button type="button" class="menu-close-bth">
+            <svg class="menu-close-icon" width="17" height="17">
                 <use href="../img/icons.svg#icon-close"></use>
             </svg>
         </button>
@@ -126,4 +117,3 @@
     </div>
 </div>
 </div>
--->
