--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -1,4 +1,4 @@
-<section class="sale">
+<section class="sale" id="sale">
   <div class="container">
     <h2 class="sale-title">Sale</h2>
     <div class="sale-container">
@@ -129,8 +129,8 @@
         </h3>
         <p class="article">Product tag: 706587</p>
         <div class="sale-price-block">
-          <p class="sale-prise">€1500</p>
-          <p class="full-prise">€3000</p>
+          <p class="sale-price">€1500</p>
+          <p class="full-price">€3000</p>
         </div>
         <p class="sale-text">
           The Garmin MARQ Commander Gen 2 Carbon Edition is a modern smartwatch
