--- a/src/css/sale.css
+++ b/src/css/sale.css
@@ -1,4 +1,5 @@
 .sale {
+  padding: 30px 0;
 }
 
 .sale-title {
@@ -6,9 +7,9 @@
   font-size: 32px;
   line-height: 1;
   letter-spacing: -0.02em;
-  color: #0c0c0c;
   margin-bottom: 24px;
 }
+
 .sale-list {
   display: flex;
   gap: 5px;
@@ -20,8 +21,6 @@
   width: 80px;
   height: 80px;
   background: #f3f3f3;
-  width: 80px;
-  height: 80px;
   padding: 13px 0;
 }
 .sale-list-pic {
@@ -73,9 +72,8 @@
   margin-bottom: 28px;
 }
 
-.sale-prise {
+.sale-price {
   font-weight: 600;
-  font-size: 16px;
   line-height: 1.25;
   letter-spacing: -0.02em;
   color: #fbfbfb;
@@ -83,10 +81,13 @@
   min-width: 68px;
   height: 32px;
   background: rgba(251, 251, 251, 0.1);
-  text-align: center;
   padding: 8px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.full-prise {
+
+.full-price {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: -0.02em;
@@ -116,15 +117,21 @@
   border-radius: 8px;
   padding: 8px 12px;
   height: 32px;
-  padding: 8px 12px;
+  display: flex;
+  align-items: center;
 }
 
 /* ----------Tablet version-------- */
 
 @media screen and (min-width: 768px) {
+  .sale {
+    padding: 40px 0;
+  }
+
   .sale-title {
     font-size: 48px;
     line-height: 0.92;
+    margin-bottom: 40px;
   }
 
   .sale-list {
@@ -143,7 +150,6 @@
     width: 552px;
     height: 558px;
     padding: 80px 0;
-    display: inline-block;
     margin: 0;
   }
 
@@ -152,6 +158,7 @@
     gap: 20px;
     margin-bottom: 40px;
   }
+
   .sale-content {
     padding: 60px;
   }
@@ -165,10 +172,9 @@
   .sale-price-block {
     margin-bottom: 30px;
   }
-  .sale-prise {
+  .sale-price {
     font-size: 20px;
     min-width: 78px;
-    font-size: 20px;
     line-height: 1;
   }
 
@@ -187,9 +193,16 @@
 }
 
 @media screen and (min-width: 1280px) {
+  .sale {
+    padding: 50px 0;
+  }
+
   .sale-container {
     display: flex;
     gap: 40px;
+  }
+  .sale-block-photo {
+    margin-bottom: 0;
   }
   .sale-active-wrapper {
     width: 428px;
