--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,75 +1,95 @@
-<footer class="footer-container">
-  <div class="conteiner-title">
-    <div class="logo">
-      <a href="logo-logo" href="./index.html">watchcharm</a>
-    </div>
-    <div class="social-conteiner">
-      <ul class="footer-icons-list">
-        <li class="footer-icon-item">
-          <a href="https://www.facebook.com/goITclub/" class="footer-icon-link">
-            <svg class="footer-icon-icon" width="18" height="18">
-              <use href="./img/icons.svg#icon-facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="footer-icon-item">
-          <a
-            href="https://www.instagram.com/goitclub/ "
-            class="footer-icon-link"
-          >
-            <svg class="footer-icon-icon" width="18" height="18">
-              <use href="./img/icons.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="footer-icon-item">
-          <a
-            href="https://www.facebook.com/goITclub/ "
-            class="footer-icon-link"
-          >
-            <svg class="footer-icon-icon" width="18" height="18">
-              <use href="./img/icons.svg#icon-youtube"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <button
-      type="button"
-      class="phone-button"
-      onclick="window.location.href='tel:+380684439426'"
-    >
-      <span class="phone-button-text">+380 (68) 443-94-26</span>
-    </button>
-    <p class="footer-text">
-      Have the time of your life with our watches: where high-class
-      craftsmanship meets impeccable design
-    </p>
-
-    <div class="footer-conteiner-menu">
-      <div class="footer-menu">
-        <ul class="footer-menu-contact">
-          <li class="ft-menu-list">Home</li>
-          <li class="ft-menu-list">About Us</li>
-          <li class="ft-menu-list">Catalog</li>
-          <li class="ft-menu-list">Sale</li>
-          <li class="ft-menu-list">Reviews</li>
-          <li class="ft-menu-list">Contact Us</li>
-        </ul>
+<footer class="footer" id="footer">
+  <div class="container">
+    <div class="footer-container">
+      <div class="footer-top">
+        <div class="footer-top-tab">
+          <div>
+            <a href="./index.html" class="footer-logo">watchcharm</a>
+            <ul class="footer-soc-list">
+              <li class="footer-soc-item">
+                <a
+                  href="https://www.facebook.com/goITclub/"
+                  class="footer-soc-link"
+                  target="_blank"
+                >
+                  <svg width="20" height="20">
+                    <use href="./img/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a
+                  href="https://www.instagram.com/goitclub/"
+                  class="footer-soc-link"
+                  target="_blank"
+                >
+                  <svg width="20" height="20">
+                    <use href="./img/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-soc-item">
+                <a
+                  href="https://www.youtube.com/c/GoIT"
+                  class="footer-soc-link"
+                  target="_blank"
+                >
+                  <svg width="20" height="20">
+                    <use href="./img/icons.svg#icon-youtube"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <address class="footer-address">
+            <a class="footer-address-link" href="tel:+380684439426"
+              >+380 (68) 443-94-26</a
+            >
+          </address>
+        </div>
+        <h2 class="footer-title">
+          Have the time of your life with our watches: where high-class
+          craftsmanship meets impeccable design
+        </h2>
       </div>
-      <div class="footer-adress">
-        <p class="footer-adress-text">
+      <div class="footer-middle">
+        <nav class="footer-nav">
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item">
+              <a href="./index.html" class="footer-nav-link">Home</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="#about" class="footer-nav-link">About Us</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="#catalog" class="footer-nav-link">Catalog</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="#sale" class="footer-nav-link">Sale</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="#reviews" class="footer-nav-link">Reviews</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="#contact" class="footer-nav-link">Contact Us</a>
+            </li>
+          </ul>
+        </nav>
+        <p class="footer-street">
           1678 S. Pioneer Road Salt Lake City UT 84104
         </p>
       </div>
-    </div>
-    <div class="horizontal-line"></div>
-    <div class="policy">
-      <p class="policy-text">©2023 The Watch Spot. All rights reserved.</p>
-      <ul class="policy-list">
-        <li class="policy-text-list">Terms of Service</li>
-        <li class="policy-text-list">Privacy Policy</li>
-      </ul>
+      <div class="footer-bottom">
+        <p class="footer-copy">©2023 The Watch Spot. All rights reserved.</p>
+        <ul class="footer-privacy-list">
+          <li class="footer-privacy-item">
+            <a href="" class="footer-privacy-link">Terms of Service</a>
+          </li>
+          <li class="footer-privacy-item">
+            <a href="" class="footer-privacy-link">Privacy Policy</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </footer>
